[package]
name = "platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
bevy_asset_loader = { version = "0.12.1", features = [
    "2d",
    "stageless",
    "progress_tracking",
    "progress_tracking_stageless",
] }
bevy_ecs_ldtk = "0.4.0"
bevy_rapier2d = "0.18.0"
serde = "1.0.147"
serde_json = "1.0.87"
